<resources>
    <string name="app_name">Зарплата Бристоля</string>
    <string name="msg_empty">Нажмите на + иконку для добавления записи о заработке!</string>
    <string name="msg_empty_filtered">Click the + icon to add a todo item, or change your filter to show other items</string>
    <string name="menu_about">О программе</string>
    <string name="is_completed">Item is completed</string>
    <string name="created_on">Дата</string>
    <string name="menu_edit">Изменить</string>
    <string name="desc">Описание</string>
    <string name="notes">Заметки</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_all">All</string>
    <string name="menu_filter_completed">Completed</string>
    <string name="menu_filter_outstanding">Outstanding</string>
    <string name="oops">Sorry! Something went wrong!</string>
    <string name="report_template"><![CDATA[<h1>To-Do Items</h1>
{{#this}}
<h2>{{description}}</h2>
<p>{{#completed}}<b>COMPLETED</b> &mdash; {{/completed}}Created on: {{dateFormat createdOn}}</p>
<p>{{notes}}</p>
{{/this}}
]]></string>
    <string name="menu_share">Share</string>
    <string name="pref_url_title">Web service URL</string>
    <string name="web_service_url_key">webServiceUrl</string>
    <string name="web_service_url_default">https://commonsware.com/AndExplore/2.0/items.json</string>
    <string name="settings">Настройки</string>
    <string name="menu_import">Импорт</string>
    <string name="cancel">Отмена</string>
    <string name="retry">Повтор</string>
    <string name="import_error_title">Import Failure</string>
    <string name="import_error_message">Something went wrong with the import!</string>
    <string name="pref_import_title">Import periodically</string>
    <string name="import_key">doPeriodicImport</string>
    <string name="revenue">Выручка</string>
    <string name="workers_count">Работники</string>
    <string name="count_button">Посчитать</string>
    <string name="hint_dat">Выберите дату</string>
    <string name="hint_revenue">Выручка</string>
    <string name="hint_base_salary">Базовая зарплата</string>
</resources>