<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
      android:id="@+id/date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      android:ems="10"
      android:gravity="center_vertical"
      android:hint="@string/hint_dat"
      android:inputType="date"
      android:minHeight="48dp"
      android:paddingLeft="8dp"
      android:textColorHint="#757575"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/baseSalary"
      app:layout_constraintEnd_toStartOf="@+id/dateButton"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/baseSalary"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      android:ems="10"
      android:hint="@string/hint_base_salary"
      android:inputType="number"
      android:minHeight="48dp"
      android:paddingStart="8dp"
      android:textColorHint="#757575"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/seekBarText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date" />

  <SeekBar
      android:id="@+id/countWorkers"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      android:max="5"
      android:minHeight="48dp"
      android:progress="1"
      app:layout_constraintBottom_toTopOf="@+id/revenue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/seekBarText" />

  <EditText
      android:id="@+id/revenue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:hint="@string/hint_revenue"
      android:inputType="number"
      android:minHeight="48dp"
      android:paddingLeft="8dp"
      android:textColorHint="#757575"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/countWorkers" />

  <TextView
      android:id="@+id/countWorkersText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:gravity="center"
      android:text="1"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/countWorkers"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/seekBarText"
      app:layout_constraintTop_toBottomOf="@+id/baseSalary"
      app:layout_constraintVertical_bias="0.68" />

  <TextView
      android:id="@+id/salary"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:minHeight="48dp"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/revenue" />

  <TextView
      android:id="@+id/seekBarText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:paddingLeft="8dp"
      android:text="Сотрудники: "
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/countWorkers"
      app:layout_constraintEnd_toStartOf="@+id/countWorkersText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/baseSalary" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:gravity="center_vertical"
      android:minHeight="48dp"
      android:paddingLeft="8dp"
      android:text="Зарплата:"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/salary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/revenue" />

  <Button
      android:id="@+id/dateButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      android:minHeight="48dp"
      android:text="Выбрать"
      android:textColor="#000000"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/baseSalary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/date"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>